Fix typo in About Me section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <section class="section">
                 <h2>👋 About Me</h2>
                 <p>
-                    Hi! I'm Sagarika, a passionate product manager and pdeveloper I love creating beautiful, 
+                    Hi! I'm Sagarika, a passionate product manager and developer I love creating beautiful, 
                     user-friendly applications and exploring new technologies. When I'm not coding, 
                     you can find me learning something new or contributing to open-source projects.
                 </p>
