Update job title and dates in experience section

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             <section class="section">
                 <h2>💼 Experience</h2>
                 <div class="experience-item">
-                    <h3>Junior Developer</h3>
-                    <div class="date">Jan 2024 - Present</div>
+                    <h3>Staff Product Manager</h3>
+                    <div class="date">Jan 2017 - Present</div>
                     <p>Working on web development projects and learning best practices.</p>
                 </div>
                 <div class="experience-item">
