--- a/index.html
+++ b/index.html
@@ -1,223 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Sagarika</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-        }
-
-        .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 60px 40px;
-            text-align: center;
-        }
-
-        .profile-pic {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 5px solid white;
-            margin-bottom: 20px;
-            object-fit: cover;
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-
-        .header p {
-            font-size: 1.2em;
-            opacity: 0.9;
-        }
-
-        .content {
-            padding: 40px;
-        }
-
-        .section {
-            margin-bottom: 40px;
-        }
-
-        .section h2 {
-            color: #667eea;
-            font-size: 1.8em;
-            margin-bottom: 15px;
-            border-bottom: 3px solid #667eea;
-            padding-bottom: 10px;
-        }
-
-        .section p {
-            color: #555;
-            font-size: 1.1em;
-            line-height: 1.8;
-            margin-bottom: 15px;
-        }
-
-        .skills {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .skill-tag {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 12px 20px;
-            border-radius: 25px;
-            text-align: center;
-            font-weight: 500;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .skill-tag:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.4);
-        }
-
-        .social-links {
-            display: flex;
-            gap: 15px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-
-        .social-btn {
-            background: #667eea;
-            color: white;
-            padding: 12px 25px;
-            border-radius: 25px;
-            text-decoration: none;
-            font-weight: 500;
-            transition: all 0.3s;
-            border: 2px solid #667eea;
-        }
-
-        .social-btn:hover {
-            background: white;
-            color: #667eea;
-            transform: translateY(-3px);
-            box-shadow: 0 8px 15px rgba(102, 126, 234, 0.3);
-        }
-
-        .experience-item {
-            background: #f8f9ff;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 15px;
-            border-left: 4px solid #667eea;
-        }
-
-        .experience-item h3 {
-            color: #667eea;
-            margin-bottom: 5px;
-        }
-
-        .experience-item .date {
-            color: #999;
-            font-size: 0.9em;
-            margin-bottom: 10px;
-        }
-
-        .footer {
-            background: #f8f9ff;
-            padding: 20px;
-            text-align: center;
-            color: #999;
-            border-top: 1px solid #e0e0e0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sagarika - Staff Product Manager | AI & Healthcare Specialist | App Developer</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      min-height: 100vh;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+    header {
+      text-align: center;
+      color: white;
+      padding: 4rem 0;
+    }
+    h1 {
+      font-size: 3.5rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    }
+    .subtitle {
+      font-size: 1.5rem;
+      opacity: 0.95;
+      margin-bottom: 1rem;
+    }
+    .bio {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto 3rem;
+      opacity: 0.9;
+    }
+    section {
+      background: white;
+      border-radius: 12px;
+      padding: 2.5rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    section:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+    }
+    h2 {
+      color: #333;
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      border-bottom: 3px solid #667eea;
+      padding-bottom: 0.5rem;
+    }
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+      gap: 2rem;
+    }
+    .project-card {
+      background: #f8f9ff;
+      border-radius: 8px;
+      padding: 1.5rem;
+      border-left: 5px solid #667eea;
+      transition: all 0.3s ease;
+    }
+    .project-card:hover {
+      background: white;
+      box-shadow: 0 8px 20px rgba(102,126,234,0.3);
+    }
+    .project-title {
+      font-size: 1.4rem;
+      color: #333;
+      margin-bottom: 0.5rem;
+    }
+    .project-desc {
+      color: #666;
+      margin-bottom: 1rem;
+    }
+    .tech {
+      font-size: 0.9rem;
+      color: #667eea;
+      font-weight: 500;
+    }
+    .links {
+      margin-top: 1rem;
+    }
+    .btn {
+      display: inline-block;
+      padding: 0.7rem 1.5rem;
+      background: #667eea;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 500;
+      transition: background 0.3s;
+      margin-right: 1rem;
+      margin-bottom: 0.5rem;
+    }
+    .btn:hover {
+      background: #5a67d8;
+    }
+    .btn-outline {
+      background: transparent;
+      color: #667eea;
+      border: 2px solid #667eea;
+    }
+    .btn-outline:hover {
+      background: #667eea;
+      color: white;
+    }
+    footer {
+      text-align: center;
+      color: white;
+      padding: 2rem;
+      opacity: 0.8;
+    }
+    @media (max-width: 768px) {
+      h1 { font-size: 2.5rem; }
+      .container { padding: 1rem; }
+      section { padding: 2rem 1.5rem; }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <div class="header">
-            <img src="https://avatars.githubusercontent.com/u/YOUR_GITHUB_ID?v=4" alt="Profile Picture" class="profile-pic">
-            <h1>Sagarikaa</h1>
-            <p>Developer | Designer | Creator</p>
+  <div class="container">
+    <header>
+      <h1>Sagarika</h1>
+      <p class="subtitle">Staff Product Manager | AI & Healthcare Specialist | App Developer</p>
+      <p class="bio">
+        Building AI-driven products for eCommerce and healthcare at eHealth. Passionate about agentic AI, recommendation engines, and family-friendly mobile games. Bay Area-based.
+      </p>
+    </header>
+
+    <section id="projects">
+      <h2>Featured Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <div class="project-title">Party Host Toolkit (iOS App)</div>
+          <p class="project-desc">Offline app for ages 8+ with prompts for icebreakers, Simon Says, drawing challenges, and dice rollers. Launched on App Store via Expo/Replit.</p>
+          <div class="tech">React Native, Expo, JSON Data</div>
+          <div class="links">
+            <a href="https://apps.apple.com/[app-link]" class="btn">App Store</a>
+            <a href="[repo-url]" class="btn btn-outline">GitHub</a>
+          </div>
         </div>
-
-        <!-- Main Content -->
-        <div class="content">
-            <!-- About Section -->
-            <section class="section">
-                <h2>👋 About Me</h2>
-                <p>
-                    Hi! I'm Sagarika, a passionate product manager and developer I love creating beautiful, 
-                    user-friendly applications and exploring new technologies. When I'm not coding, 
-                    you can find me learning something new or contributing to open-source projects.
-                </p>
-            </section>
-
-            <!-- Skills Section -->
-            <section class="section">
-                <h2>🛠️ Skills</h2>
-                <div class="skills">
-                    <div class="skill-tag">JavaScript</div>
-                    <div class="skill-tag">React</div>
-                    <div class="skill-tag">Python</div>
-                    <div class="skill-tag">HTML/CSS</div>
-                    <div class="skill-tag">Git</div>
-                    <div class="skill-tag">UI/UX Design</div>
-                </div>
-            </section>
-
-            <!-- Experience Section -->
-            <section class="section">
-                <h2>💼 Experience</h2>
-                <div class="experience-item">
-                    <h3>Staff Product Manager</h3>
-                    <div class="date">Jan 2017 - Present</div>
-                    <p>Working on web development projects and learning best practices.</p>
-                </div>
-                <div class="experience-item">
-                    <h3>Open Source Contributor</h3>
-                    <div class="date">2023 - Present</div>
-                    <p>Contributing to various open-source projects and improving my skills.</p>
-                </div>
-            </section>
-
-            <!-- Contact Section -->
-            <section class="section">
-                <h2>🔗 Connect With Me</h2>
-                <div class="social-links">
-                    <a href="https://github.com/sagarikaa" class="social-btn">GitHub</a>
-                    <a href="https://linkedin.com/in/sagarikaa" class="social-btn">LinkedIn</a>
-                    <a href="mailto:your.email@example.com" class="social-btn">Email</a>
-                </div>
-            </section>
+        <div class="project-card">
+          <div class="project-title">3D Forest Survival Game</div>
+          <p class="project-desc">Browser-based survival game with day/night cycles, resource collection, enemies, saves, and biomes (grass, sand, snow). Full HTML/JS/Three.js.</p>
+          <div class="tech">Three.js, Vanilla JS, Local Storage</div>
+          <div class="links">
+            <a href="[demo-url]" class="btn">Play Demo</a>
+            <a href="[repo-url]" class="btn btn-outline">GitHub</a>
+          </div>
         </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <p>&copy; 2026 Sagarikaa. All rights reserved.</p>
+        <div class="project-card">
+          <div class="project-title">Sketch & Guess Party (Pictionary MVP)</div>
+          <p class="project-desc">Multiplayer drawing game MVP built on Replit. Core for party apps and AI product experiments.</p>
+          <div class="tech">React, Replit, WebSockets</div>
+          <div class="links">
+            <a href="[repo-url]" class="btn">GitHub</a>
+            <a href="[replit-url]" class="btn btn-outline">Replit</a>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <h2>About</h2>
+      <p>
+        Transitioning staff PM with expertise in AI/ML products (LightGBM rec engines, multi-LLM reasoning, healthcare screeners). Mentoring kids in tech competitions while building side projects. SJSU alum. Let's connect on AI agents!
+      </p>
+    </section>
+
+    <section id="contact">
+      <h2>Get in Touch</h2>
+      <p style="font-size: 1.1rem;">
+        <a href="https://linkedin.com/in/[your-linkedin]" class="btn">LinkedIn</a>
+        <a href="mailto:[your-email]" class="btn btn-outline">Email</a>
+        <a href="https://github.com/[your-username]" class="btn btn-outline">GitHub</a>
+      </p>
+    </section>
+  </div>
+
+  <footer>
+    <p>&copy; 2026 Sagarika. Built with ❤️ for showcasing projects.</p>
+  </footer>
 </body>
 </html>
