--- a/index.html
+++ b/index.html
@@ -143,26 +143,8 @@
       <h2>Featured Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <div class="project-title">Party Host Toolkit (iOS App)</div>
-          <p class="project-desc">Offline app for ages 8+ with prompts for icebreakers, Simon Says, drawing challenges, and dice rollers. Launched on App Store via Expo/Replit.</p>
-          <div class="tech">React Native, Expo, JSON Data</div>
-          <div class="links">
-            <a href="https://apps.apple.com/[app-link]" class="btn">App Store</a>
-            <a href="[repo-url]" class="btn btn-outline">GitHub</a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-title">3D Forest Survival Game</div>
-          <p class="project-desc">Browser-based survival game with day/night cycles, resource collection, enemies, saves, and biomes (grass, sand, snow). Full HTML/JS/Three.js.</p>
-          <div class="tech">Three.js, Vanilla JS, Local Storage</div>
-          <div class="links">
-            <a href="[demo-url]" class="btn">Play Demo</a>
-            <a href="[repo-url]" class="btn btn-outline">GitHub</a>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-title">Sketch & Guess Party (Pictionary MVP)</div>
-          <p class="project-desc">Multiplayer drawing game MVP built on Replit. Core for party apps and AI product experiments.</p>
+          <div class="project-title">Sketch & Guess Party</div>
+          <p class="project-desc">Multiplayer drawing game built on Replit. Core for party apps and AI product experiments.</p>
           <div class="tech">React, Replit, WebSockets</div>
           <div class="links">
             <a href="[repo-url]" class="btn">GitHub</a>
